--- a/leomanagement/MainPage.xaml
+++ b/leomanagement/MainPage.xaml
@@ -1,20 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<FlyoutPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:pages="clr-namespace:leomanagement.Pages"
-            NavigationPage.HasNavigationBar="False" FlyoutLayoutBehavior="Popover" 
+            NavigationPage.HasNavigationBar="False"  
             x:Class="leomanagement.MainPage">
-    <FlyoutPage.Flyout>
+    <!--<FlyoutPage.Flyout>
         <pages:SideMenu x:Name="SideMenuPage" Title="Menu" />
-    </FlyoutPage.Flyout>
-    <FlyoutPage.Detail>
+    </FlyoutPage.Flyout>-->
+    <!--<FlyoutPage.Detail>
         <NavigationPage>
             <x:Arguments>
                 <pages:Home />
             </x:Arguments>
         </NavigationPage>
-    </FlyoutPage.Detail>
+    </FlyoutPage.Detail>-->
+    <VerticalStackLayout >
+        <pages:Home />
+    </VerticalStackLayout>
 
     
 
-</FlyoutPage>
+</ContentPage>
