--- a/leomanagement/Pages/Home.xaml
+++ b/leomanagement/Pages/Home.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="leomanagement.Pages.Home" NavigationPage.HasNavigationBar="True" IconImageSource="menu"
+             x:Class="leomanagement.Pages.Home" NavigationPage.HasNavigationBar="False" 
              Title="Home">
     <ContentPage.Content>
         <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
