--- a/leomanagement/Pages/Login.xaml
+++ b/leomanagement/Pages/Login.xaml
@@ -2,8 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="leomanagement.Pages.Login"
-             xmlns:converters="clr-namespace:leomanagement.Converters"
-             Title="">
+             xmlns:converters="clr-namespace:leomanagement.Converters" 
+             Title="Log In">
     <ContentPage.Resources>
         <converters:TrueToVisibleConverter x:Key="TrueToVisibleConverter" />
         <converters:FalseToVisibleConverter x:Key="FalseToVisibleConverter" />
